# Kwizzly

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  quizly.postman_collection.json
api/: main.py  pyproject.toml
api/app/: __init__.py
api/core/: config.py
api/htmlcov/: app___init___py.html  app_enums___init___py.html  app_enums_user_py.html  app_models___init___py.html  app_models_user_py.html  app_schemas___init___py.html  app_schemas_quiz_py.html  app_schemas_user_py.html  app_services___init___py.html  app_services_quiz_py.html  app_services_user_py.html  app_views___init___py.html  app_views_home_py.html  app_views_v1___init___py.html  app_views_v1_quiz_py.html  app_views_v1_tournament_py.html  app_views_v1_user_py.html  app_views_ws___init___py.html  app_views_ws_quiz_py.html  app_views_ws_user_py.html  core___init___py.html  core_config_py.html  core_db___init___py.html  core_db_db_py.html  core_exceptions___init___py.html  core_exceptions_base_py.html  core_exceptions_error_code_py.html  core_exceptions_token_py.html  core_exceptions_user_py.html  core_fastapi___init___py.html  core_fastapi_dependencies___init___py.html  core_fastapi_dependencies_logging_py.html  core_fastapi_dependencies_permission_py.html  core_fastapi_middlewares___init___py.html  core_fastapi_middlewares_authentication_py.html  core_fastapi_schemas___init___py.html  core_fastapi_schemas_current_user_py.html  core_helpers___init___py.html  core_helpers_cache___init___py.html  core_helpers_cache_base___init___py.html  (+22 more)
api/tests/: common.py  conftest.py  play.py  (+5 more)
(+89 files in other folders)
