[tool.poetry]
name = "api"
version = "0.1.0"
description = "Backend for kwizzly"
authors = ["Matthew Wisdom <matthewwisdom11@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
pymongo = "^4.3.2"
ujson = "^5.5.0"
aioredis = "^2.0.1"
pydantic = {extras = ["email"], version = "^1.10.2"}
jwt = "^1.3.1"
pyotp = "^2.7.0"
Werkzeug = "^2.2.2"
python-dotenv = "^0.21.0"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
